--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/* Luhan Lingnau C22363 EESE316 Formative Assessment 2 */
+/* CSS */
+
 @import url('https://fonts.googleapis.com/css2?family=Spartan:wght@700&display=swap');
 *{
 	padding: 0;
